--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
-    "gulp-markdown": "^1.2.0"
+    "bootstrap": "^4.0.0-alpha.6",
+    "bulma": "^0.3.2",
+    "gulp-markdown": "^1.2.0",
+    "jquery": "^3.1.1"
   }
 }
